--- a/Lab2_Cards/lab2.html
+++ b/Lab2_Cards/lab2.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Cards</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -22,6 +26,11 @@
             font-weight: 400;
             font-size: 2em
         }
+
+        button{
+            padding: 10px;
+
+        }
     </style>
 </head>
 
@@ -37,23 +46,35 @@
     <div id="card-list"></div>
 
     <script>
-        function addCard() {
+        function addCard(
+                title = "My Card Title",
+                text = "lorem impusm ble bla",
+                url = null,
+        ) {
             // clone the template
-            const data = [{ name: 'bob', age: 23 },
-            { name: 'alice', age: 39 }]
             const template =
                 document.getElementById("card-template")
                     .content.cloneNode(true);
+
             // populate the template
-            template.querySelector('.card-title').innerText =
-                'My Card Title';
-            template.querySelector('.card-text').innerText =
-                'lorem ipsum ble bla';
+            template.querySelector('.card-title').innerText = title;
+            template.querySelector('.card-text').innerText = text;
+
             // include the populated template into the page
             document.querySelector('#card-list')
                 .appendChild(template);
-        }
-        addCard();
+        };
+
+        //data set example 
+         const data = [
+            { name: 'bob', age: 23 },
+            { name: 'alice', age: 39 }
+        ];
+
+            data.forEach(person => {
+                addCard(`Name: ${person.name}`, `Age: ${person.age}`)
+            });
+
     </script>
 </body>
 
