--- a/Class Notes/bootstrap.html
+++ b/Class Notes/bootstrap.html
@@ -1,24 +1,87 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,
-initial-scale=1">
-<title>Bootstrap demo</title>
-<link
-href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/
-bootstrap.min.css" rel="stylesheet"
-integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQ
-N+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Lab 4: Cards with Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <style>
+        .my-custom-row {
+            height: 400px;
+            background-color: bisque;
+        }
+    </style>
 </head>
+
 <body>
-<h1>Hello, world!</h1>
-<script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bo
-otstrap.bundle.min.js"
-integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8I
-VInixGAoxmnlMuBnhbgrkm"
-crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-2">Col One</div>
+            <div class="col-sm-12 col-md-6 col-lg-8">Col Two</div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 order-md-2">Col One</div>
+            <div class="col-sm-6 order-md-1">Col Two</div>
+        </div>
+
+        <div class="row"></div>
+        <div class="col-sm-4 offset-2">Col One</div>
+        <div class="col-sm-4 offset-1">Col Two</div>
+    </div>
+
+    <div class="row my-custom-row justify-content-center align-items-center">
+        <div class="col-sm-4">
+            <div class="p-3 border bg-light">Col One</div>
+        </div>
+        <div class="col-sm-4">
+            <div class="p-3 border bg-light">Col Two</div>
+        </div>
+
+    </div>
+
+    <div class="row justify-content-evenly">
+        <div class="col">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Launch demo modal
+            </button>
+        </div>
+        <div class="col"><button type="button" class="btn btn-secondary">Secondary</button></div>
+        <div class="col"><button type="button" class="btn btn-warning">Warning</button></div>
+
+    </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+</body>
+
 </html>
